--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoff</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Rubik:ital,wght@1,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Rubik:ital,wght@1,700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-<div class="wrapper">
+
     <div class="nav">
         <h1 class="logo">Payoff</h1>
         <div class="nav__items">
@@ -18,25 +21,32 @@
             <a href="Contact">Contact</a>
         </div>
     </div>
-    <section class="home">
-        <div class="content__left">
+    <div class="wrapper">
+        <section class="home">
+                <div class="content__display" >
+                    <div class="content__logo">
+                        <h1 class="logo">Payoff</h1>
+                    </div>
+                </div>
+                <div class="content__text">
+                    <h1>Payoff enables creditors to receive on average 2x in lost receivables from indebted clients.
+                    </h1>
+                </div>
+            </div>
 
-        </div>
-        <div class="content__right">
-            <h4>Payoff enables creditors to receive on average 2x in lost receivables from indebted clients.</h4>
-        </div>
-        <button>I am a small business</button><button>I am a creditor with outstanding recieveables</button><button>I have business clients in debt</button>
-    </section>
-    <section class="about">
+        </section>
+        <section class="about">
 
-    </section>
-    <section class="testimonials">
+        </section>
+        <section class="testimonials">
 
-    </section>
-    <section class="contact">
+        </section>
+        <section class="contact">
 
-    </section>
-</div>
+        </section>
+    </div>
+    <script src="particles.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
