--- a/index.html
+++ b/index.html
@@ -18,22 +18,33 @@
         <div class="nav__items">
             <a href="#">About</a>
             <a href="#">Testimonials</a>
-            <a href="Contact">Contact</a>
+            <a href="#">Contact</a>
+        </div>
+        <div class="hamburger">
+            <span class="first-bar"></span>
+            <span class="second-bar"></span>
+            <span class="third-bar"></span>
         </div>
     </div>
     <div class="wrapper">
         <section class="home">
-                <div class="content__display" >
-                    <div class="content__logo">
-                        <h1 class="logo">Payoff</h1>
+            <div class="particles-js" id="particles-js">
+                <div class="home__wrapper">
+                    <div class="content__display" >
+                        <div class="content__logo">
+                            <h1 class="logo logo__home">Payoff</h1>
+                        </div>
                     </div>
-                </div>
-                <div class="content__text">
-                    <h1>Payoff enables creditors to receive on average 2x in lost receivables from indebted clients.
-                    </h1>
+                    <div class="content__text">
+                        <h1>on average recover <span style="color: #2A9134;">2x</span> in lost receivables from indebted clients.
+                        </h1>
+                    </div>
+                    <div class="content__btn">
+                        <button>Get Started</button>
+                    </div>
+
                 </div>
             </div>
-
         </section>
         <section class="about">
 
