add responsive nav

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             <span class="third-bar"></span>
         </div>
     </div>
+    <div class="menu">
+        <li class="menu__item">Home</li>
+        <li class="menu__item">About</li>
+        <li class="menu__item">Testimonials</li>
+        <li class="menu__item">Contact</li>
+    </div>
     <div class="wrapper">
         <section class="home">
             <div class="particles-js" id="particles-js">
