add about section

--- a/index.html
+++ b/index.html
@@ -34,26 +34,45 @@
     </div>
     <div class="wrapper">
         <section class="home">
-            <div class="particles-js" id="particles-js">
-                <div class="home__wrapper">
-                    <div class="content__display" >
-                        <div class="content__logo">
-                            <h1 class="logo logo__home">Payoff</h1>
-                        </div>
-                    </div>
-                    <div class="content__text">
-                        <h1>on average recover <span style="color: #2A9134;">2x</span> in lost receivables from indebted clients.
-                        </h1>
-                    </div>
-                    <div class="content__btn">
-                        <button>Get Started</button>
-                    </div>
-
+            <div class="particles-js" id="particles-js"></div>
+            <div class="content__display" >
+                <div class="content__logo">
+                    <h1 class="logo logo__home">Payoff</h1>
                 </div>
+            </div>
+            <div class="content__text">
+                <h1>on average recover <span style="color: #2A9134;">2x</span> in lost receivables from indebted clients.
+                </h1>
+            </div>
+            <div class="content__btn">
+                <button>Learn More</button>
             </div>
         </section>
         <section class="about">
-
+            <h1 class="about__h1">What we do for</h1>
+            <div class="about__grid">
+            <div class="about__modal" style="background: #f6bc28 ;">
+                <h1>Small Business Debt</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores itaque nam accusamus hic sed eligendi omnis soluta, id rem, facere rerum vero quidem nisi, numquam reiciendis assumenda laborum animi!</p>
+                <div class="about__modal__btn__wrapper">
+                    <button class="about__modal__btn">Get Started</button>
+                </div>
+            </div>
+            <div class="about__modal" style="background: #ff3535;">
+                <h1>Creditors</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores itaque nam accusamus hic sed eligendi omnis soluta, id rem, facere rerum vero quidem nisi, numquam reiciendis assumenda laborum animi!</p>
+                <div class="about__modal__btn__wrapper">
+                    <button class="about__modal__btn">Get Started</button>
+                </div>
+            </div>
+            <div class="about__modal" style="background: #3c8ff5;">
+                <h1>Partners</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores itaque nam accusamus hic sed eligendi omnis soluta, id rem, facere rerum vero quidem nisi, numquam reiciendis assumenda laborum animi!</p>
+                <div class="about__modal__btn__wrapper">
+                <button class="about__modal__btn">Get Started</button>
+                </div>
+            </div>
+        </div>
         </section>
         <section class="testimonials">
 
