--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <div class="about__grid">
             <div class="about__modal" style="background: #f6bc28 ;">
                 <h1>Small Business</h1>
-                <p>We partner with you to stop the bleeding flow of cash, giving you the time you need to pay your creditors. Payoff allows you to pay all of your creditors using a realistic monthly budget, keeing you in business.</p>
+                <p>We partner with you to stop the bleeding flow of cash, giving you the time you need to pay your creditors. Payoff allows you to pay all of your creditors using a realistic monthly budget, keeping you in business.</p>
                 <div class="about__modal__btn__wrapper">
                     <button class="about__modal__btn">Get Started</button>
                 </div>
             </div>
             <div class="about__modal" style="background: #ff3535;">
                 <h1>Creditors</h1>
-                <p>Reclaim recieveables you though were lost. Enable your frim to collect on average 2X more than typical collection processes.</p>
+                <p>Reclaim recieveables you though were lost. Enable your frim to collect on average 2x more than typical collection processes.</p>
                 <div class="about__modal__btn__wrapper">
                     <button class="about__modal__btn">Get Started</button>
                 </div>
@@ -79,13 +79,29 @@
         </section>
         <section class="testimonials" id="testimonials">
             <h1>Hear from our clients</h1>
-            <div class="test__modal">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quia qui amet nostrum odio, ea numquam, veritatis quos explicabo neque fuga asperiores dolorem consectetur! Repellendus quibusdam voluptatum velit consequuntur magni.</p>
-                <h5>Client Name</h5>
+            <div class="testimonials__grid">
+            <div class="testimonial__quote">
+                <p><i>"I really appreciate the over-all success the people at Payoff had with the deft for my samll business. If it wasn't for you guys, I likely still wouldn't be in business."</i></p>
             </div>
+            <div class="testimonial__quote">
+                <p><i>"When our business decilned and we got behind on our bilss your company was able to help us get all our unsecured debt into one monthly payment that fit out budget. This was able to free our minds from all the debt and concentrate back on the business to build it back up."</i></p>
+            </div>
+            <div class="testimonial__quote">
+                <p><i>"You took change and handeled each account one by one until they were all satisfied and we are very grateful for your help."</i></p>
+            </div>
+            <div class="testimonial__quote">
+                <p><i>"We believed, we listened, and you delivered! We used your systematic method and debt restructuring process to successfully satisfy our creditors. An overwhelming burden has been liften from our shoulders, so that we can once again focus on the daily task of running out business."</i></p>
+            </div>
+            <div class="testimonial__quote">
+                <p><i>"I started the program with over $124,000 in debt owed to 9 different creditors.I worked with Payoff to find an affordable budget each month for these debts. 4 months after we started Payoff secured our first settlement agreement, and then shortly there after more and more creditors agreed to affordable payment terms. 4 years later my business is debt free and I couldn't have done it without Payoff's help. Payoff even saved me over $67,000 with my creditors as well!"</i></p>
+            </div>
+            <div class="testimonial__quote">
+                <p><i>"Roughly 4 years later and I finally made my fianl payment. I somehow paid off 170k in credit caard and lan debt. This was debt with a very high interest too. Payoff even managed to cut the debt in half to boot! They are like miracle workers or something."</i></p>
+            </div>
+        </div>
         </section>
         <section class="contact" id="contact">
-
+            
         </section>
     </div>
     <script src="particles.js"></script>
