--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h1>Hear from our clients</h1>
             <div class="testimonials__grid">
             <div class="testimonial__quote">
-                <p><i>"I really appreciate the over-all success the people at Payoff had with the deft for my samll business. If it wasn't for you guys, I likely still wouldn't be in business."</i></p>
+                <p><i>"I really appreciate the over-all success the people at Payoff had with the debt for my samll business. If it wasn't for you guys, I likely still wouldn't be in business."</i></p>
             </div>
             <div class="testimonial__quote">
                 <p><i>"When our business decilned and we got behind on our bilss your company was able to help us get all our unsecured debt into one monthly payment that fit out budget. This was able to free our minds from all the debt and concentrate back on the business to build it back up."</i></p>
@@ -93,10 +93,10 @@
                 <p><i>"We believed, we listened, and you delivered! We used your systematic method and debt restructuring process to successfully satisfy our creditors. An overwhelming burden has been liften from our shoulders, so that we can once again focus on the daily task of running out business."</i></p>
             </div>
             <div class="testimonial__quote">
-                <p><i>"I started the program with over $124,000 in debt owed to 9 different creditors.I worked with Payoff to find an affordable budget each month for these debts. 4 months after we started Payoff secured our first settlement agreement, and then shortly there after more and more creditors agreed to affordable payment terms. 4 years later my business is debt free and I couldn't have done it without Payoff's help. Payoff even saved me over $67,000 with my creditors as well!"</i></p>
+                <p><i>"I started the program with over $124,000 in debt owed to 9 different creditors. I worked with Payoff to find an affordable budget each month for these debts. 4 months after we started Payoff secured our first settlement agreement, and then shortly there after more and more creditors agreed to affordable payment terms. 4 years later my business is debt free and I couldn't have done it without Payoff's help. Payoff even saved me over $67,000 with my creditors as well!"</i></p>
             </div>
             <div class="testimonial__quote">
-                <p><i>"Roughly 4 years later and I finally made my fianl payment. I somehow paid off 170k in credit caard and lan debt. This was debt with a very high interest too. Payoff even managed to cut the debt in half to boot! They are like miracle workers or something."</i></p>
+                <p><i>"Roughly 4 years later and I finally made my fianl payment. I somehow paid off 170k in credit card and loan debt. This was debt with a very high interest too. Payoff even managed to cut the debt in half to boot! They are like miracle workers or something."</i></p>
             </div>
         </div>
         </section>
