--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" 
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Payoff</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Rubik:ital,wght@1,700&display=swap"
@@ -36,13 +35,14 @@
     <div class="wrapper">
         <section class="home" id="home">
             <div class="particles-js" id="particles-js"></div>
-            <div class="content__display" >
+            <div class="content__display">
                 <div class="content__logo">
                     <h1 class="logo logo__home">Payoff</h1>
                 </div>
             </div>
             <div class="content__text">
-                <h1>on average recover <span style="color: #2A9134;">2x</span> in lost receivables from indebted clients.
+                <h1>on average recover <span style="color: #2A9134;">2x</span> in lost receivables from indebted
+                    clients.
                 </h1>
             </div>
             <div class="content__btn">
@@ -52,98 +52,121 @@
         <section class="about" id="about">
             <div class="about__text">
                 <h1 class="about__h1">What we do for</h1>
-                <h4 class="about__quote"><i>"Payoff helped me pay off my 4 merchant cash advances, keep my doors open, and fed my family."</i><br>- 'Susan'</h4>
+                <h4 class="about__quote"><i>"Payoff helped me pay off my 4 merchant cash advances, keep my doors open,
+                        and fed my family."</i><br>- 'Susan'</h4>
             </div>
             <div class="about__grid">
-            <div class="about__modal" style="background: #f6bc28 ;">
-                <h1>Small Business</h1>
-                <p>We partner with you to stop the bleeding flow of cash, giving you the time you need to pay your creditors. Payoff allows you to pay all of your creditors using a realistic monthly budget, keeping you in business.</p>
-                <div class="about__modal__btn__wrapper">
-                    <button class="about__modal__btn">Get Started</button>
+                <div class="about__modal" style="background: #f6bc28 ;">
+                    <h1>Small Business</h1>
+                    <p>We partner with you to stop the bleeding flow of cash, giving you the time you need to pay your
+                        creditors. Payoff allows you to pay all of your creditors using a realistic monthly budget,
+                        keeping you in business.</p>
+                    <div class="about__modal__btn__wrapper">
+                        <button class="about__modal__btn"><a href="#contact" style="color: black;">Get
+                                Started</a></button>
+                    </div>
+                </div>
+                <div class="about__modal" style="background: #ff3535;">
+                    <h1>Creditors</h1>
+                    <p>Reclaim recieveables you though were lost. Enable your frim to collect on average 2x more than
+                        typical collection processes.</p>
+                    <div class="about__modal__btn__wrapper">
+                        <button class="about__modal__btn"><a href="#contact" style="color: black;">Get
+                                Started</a></button></button>
+                    </div>
+                </div>
+                <div class="about__modal" style="background: #3c8ff5;">
+                    <h1>Partners</h1>
+                    <p>Payoff helps CPA's, bankruptcy lawyers, turnaround management firms, and others keep their
+                        clients in business. </p>
+                    <div class="about__modal__btn__wrapper">
+                        <button class="about__modal__btn"><a href="#contact" style="color: black;">Get
+                                Started</a></button></button>
+                    </div>
                 </div>
             </div>
-            <div class="about__modal" style="background: #ff3535;">
-                <h1>Creditors</h1>
-                <p>Reclaim recieveables you though were lost. Enable your frim to collect on average 2x more than typical collection processes.</p>
-                <div class="about__modal__btn__wrapper">
-                    <button class="about__modal__btn">Get Started</button>
-                </div>
-            </div>
-            <div class="about__modal" style="background: #3c8ff5;">
-                <h1>Partners</h1>
-                <p>Payoff helps CPA's, bankruptcy lawyers, turnaround management firms, and others keep their clients in business. </p>
-                <div class="about__modal__btn__wrapper">
-                <button class="about__modal__btn">Get Started</button>
-                </div>
-            </div>
-        </div>
         </section>
         <section class="testimonials" id="testimonials">
             <h1>Hear from our clients</h1>
             <div class="testimonials__grid">
-            <div class="testimonial__quote">
-                <p><i>"I really appreciate the over-all success the people at Payoff had with the debt for my samll business. If it wasn't for you guys, I likely still wouldn't be in business."</i></p>
+                <div class="testimonial__quote">
+                    <p><i>"I really appreciate the over-all success the people at Payoff had with the debt for my small
+                            business. If it wasn't for you guys, I likely still wouldn't be in business."</i></p>
+                </div>
+                <div class="testimonial__quote">
+                    <p><i>"When our business decilned and we got behind on our bills your company was able to help us
+                            get all our unsecured debt into one monthly payment that fit out budget. This was able to
+                            free our minds from all the debt and concentrate back on the business to build it back
+                            up."</i></p>
+                </div>
+                <div class="testimonial__quote">
+                    <p><i>"You took change and handeled each account one by one until they were all satisfied and we are
+                            very grateful for your help."</i></p>
+                </div>
+                <div class="testimonial__quote">
+                    <p><i>"We believed, we listened, and you delivered! We used your systematic method and debt
+                            restructuring process to successfully satisfy our creditors. An overwhelming burden has been
+                            lifted from our shoulders, so that we can once again focus on the daily task of running our
+                            business."</i></p>
+                </div>
+                <div class="testimonial__quote">
+                    <p><i>"I started the program with over $124,000 in debt owed to 9 different creditors. I worked with
+                            Payoff to find an affordable budget each month for these debts. 4 months after we started
+                            Payoff secured our first settlement agreement, and then shortly there after more and more
+                            creditors agreed to affordable payment terms. 4 years later my business is debt free and I
+                            couldn't have done it without Payoff's help. Payoff even saved me over $67,000 with my
+                            creditors as well!"</i></p>
+                </div>
+                <div class="testimonial__quote">
+                    <p><i>"Roughly 4 years later and I finally made my final payment. I somehow paid off 170k in credit
+                            card and loan debt. This was debt with a very high interest too. Payoff even managed to cut
+                            the debt in half to boot! They are like miracle workers or something."</i></p>
+                </div>
             </div>
-            <div class="testimonial__quote">
-                <p><i>"When our business decilned and we got behind on our bilss your company was able to help us get all our unsecured debt into one monthly payment that fit out budget. This was able to free our minds from all the debt and concentrate back on the business to build it back up."</i></p>
-            </div>
-            <div class="testimonial__quote">
-                <p><i>"You took change and handeled each account one by one until they were all satisfied and we are very grateful for your help."</i></p>
-            </div>
-            <div class="testimonial__quote">
-                <p><i>"We believed, we listened, and you delivered! We used your systematic method and debt restructuring process to successfully satisfy our creditors. An overwhelming burden has been liften from our shoulders, so that we can once again focus on the daily task of running out business."</i></p>
-            </div>
-            <div class="testimonial__quote">
-                <p><i>"I started the program with over $124,000 in debt owed to 9 different creditors. I worked with Payoff to find an affordable budget each month for these debts. 4 months after we started Payoff secured our first settlement agreement, and then shortly there after more and more creditors agreed to affordable payment terms. 4 years later my business is debt free and I couldn't have done it without Payoff's help. Payoff even saved me over $67,000 with my creditors as well!"</i></p>
-            </div>
-            <div class="testimonial__quote">
-                <p><i>"Roughly 4 years later and I finally made my fianl payment. I somehow paid off 170k in credit card and loan debt. This was debt with a very high interest too. Payoff even managed to cut the debt in half to boot! They are like miracle workers or something."</i></p>
-            </div>
-        </div>
         </section>
         <section class="contact" id="contact">
             <div class="contact__text">
                 <h1>Contact Us</h1>
             </div>
             <div class="contact__grid">
-            <div class="contact__form">
-                <div class="content__logo">
-                    <h1 class="logo">Payoff</h1>
+                <div class="contact__form">
+                    <div class="content__logo">
+                        <h1 class="logo">Payoff</h1>
+                    </div>
+                    <form action="" method="post">
+                        <label for="contact__type">I am a</label>
+                        <br>
+                        <select name="dropdown" required>
+                            <option value="sb" selected>Small Business</option>
+                            <option value="c">Creditor</option>
+                            <option value="p">Business with Business Clients in Debt</option>
+                            <option value="Other">Other</option>
+                        </select>
+                        <br>
+                        <label for="firstname">First Name</label>
+                        <br>
+                        <input required type="text" name="firstname" placeholder="John" maxlength="100">
+                        <br>
+                        <label for="lastname">Last Name</label>
+                        <br>
+                        <input required type="text" name="lastname" placeholder="Doe" maxlength="100">
+                        <br>
+                        <label for="businessname">Business Name</label>
+                        <br>
+                        <input type="text" name="businessname" placeholder="Payoff" maxlength="100">
+                        <br>
+                        <label for="email">Email</label>
+                        <br>
+                        <input required type="email" name="businessname" placeholder="john@payoff.biz" maxlength="100">
+                        <br>
+                        <label for="phone">Phone Number</label>
+                        <br>
+                        <input required type="tel" name="phone" placeholder="555-555-5555" maxlength="20">
+                        <br>
+                        <input type="submit" name="submit" value="Submit" id="submit" />
+                    </form>
                 </div>
-                <form action="" method="post">
-                    <label for="contact__type">I am a</label>
-                    <br>
-                    <select name = "dropdown" required>
-                        <option value = "sb" selected>Small Business</option>
-                        <option value = "c">Creditor</option>
-                        <option value = "p">Business with Business Clients in Debt</option>
-                        <option value = "Other">Other</option>
-                     </select>
-                     <br>
-                    <label for="firstname">First Name</label>
-                    <br>
-                    <input required type="text" name="firstname" placeholder="John" maxlength="100">
-                    <br>
-                    <label for="lastname">Last Name</label>
-                    <br>
-                    <input required type="text" name="lastname" placeholder="Doe" maxlength="100">
-                    <br>
-                    <label  for="businessname">Business Name</label>
-                    <br>
-                    <input type="text" name="businessname" placeholder="Payoff" maxlength="100">   
-                    <br>
-                    <label for="email">Email</label>
-                    <br>
-                    <input required type="email" name="businessname" placeholder="john@payoff.biz" maxlength="100">   
-                    <br>
-                    <label for="phone">Phone Number</label>
-                    <br>
-                    <input required type="tel" name="phone" placeholder="555-555-5555" maxlength="20">   
-                    <br>
-                    <input type = "submit" name = "submit" value = "Submit" id="submit" />
-                </form>
             </div>
-        </div>
         </section>
         <section class="footer">
             <div class="footer__grid">
@@ -159,7 +182,7 @@
                     </ul>
                 </div>
                 <div class="footer__tel">
-                    <h3>555-555-5555</h3>
+                    <h3>(800)-411-1113</h3>
                 </div>
             </div>
             <div class="dev__banner">
